--- a/index6.html
+++ b/index6.html
@@ -32,10 +32,13 @@
 <main>
     <section>section 1</section>
     <section>section 2</section>
-    <section>section 3</section>
+    <section><a href="index.html">
+  <button>Powrót</button>
+</a</section>
 </main>
 
 <footer>footer</footer>
 
 </body>
 </html>
+
