--- a/index6.html
+++ b/index6.html
@@ -32,7 +32,7 @@
 <main>
     <section>section 1</section>
     <section>section 2</section>
-    <section><a href="index.html">
+    <section>section 3 <a href="index.html">
   <button>Powrót</button>
 </a</section>
 </main>
@@ -41,6 +41,7 @@
 
 </body>
 </html>
+
 
 
 
