--- a/index6.html
+++ b/index6.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Układ semantyczny</title>
+    <title>inf_03_2025_01_06_SG</title>
     <style>
         header, main, section, footer {
             border: 2px solid black;
@@ -41,6 +41,7 @@
 
 </body>
 </html>
+
 
 
 
