--- a/index7.html
+++ b/index7.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Układ strony</title>
+<title>inf_03_2025_01_07_SG</title>
 
 <style>
     body {
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
