--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <header><img src="klawiatura.jpg" alt="Zamczysko"</header>
+    <header><img src="klawiatura.jpg" alt="Zamczysko"></header>
 
     <nav>nav <a href="index.html">
   <button>Powrót</button>
@@ -36,4 +36,5 @@
 
 </body>
 </html>
+
 
