--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
 
 <body>
 
-    <header>header</header>
+    <header><img src="montaz_paneli.png" alt="panele"></header>
 
     <nav>
         <a href="index.html">
@@ -60,9 +60,16 @@
         <a href="#">nav</a>
     </nav>
 
-    <main>main</main>
+    <main><img src="laminowane.png" alt="paneleo">
+        <br>laminowane
+        <img src="winylowe.png" alt="paneleo">
+        <br>winylowe
+        <img src="deska.png" alt="paneleo">
+        <br>deska
+    </main>
 
     <footer>footer</footer>
 
 </body>
 </html>
+
